added more description in readme

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <header>
-        <h1>Kalkulator Bangun Ruang</h1>
+        <!-- <h1>Kalkulator Bangun Ruang</h1> -->
+        <a href="index.html"><h1>Kalkulator Bangun Ruang</h1></a>
     </header>
     <main>
         <section>
@@ -22,12 +23,11 @@
             <h2>Persegi</h2>
             <img src="assets/persegi.jpg" alt="persegi">
             <p>Rumus pada Persegi yaitu :</p>
-            <div>L = s x s</div>
-            <div>K = 4 x s</div>
+            <p>L = s x s <br> K = 4 x s</p>
             <p>Dimana :</p>
-            <div>L : Luas</div>
-            <div>K : Keliling</div>
-            <div>s : Sisi</div><br>
+            <p>L : Luas</p>
+            <p>K : Keliling</p>
+            <p>s : Sisi</p><br><hr>
             <div class="count">
                 <p>Input Nilai Sisi</p>
                 <input type="number" id="sisi-persegi" name="sisi-persegi" required>
