Added persegi panjang section and asset

--- a/index.html
+++ b/index.html
@@ -38,6 +38,23 @@
                 <button type="reset" class="btn-reset">Reset</button>
             </div>
         </section>
+        <section id="persegi-panjang">
+            <h2>Persegi Panjang</h2>
+            <img src="assets/persegi panjang.jpg" alt="persegi-panjang">
+            <p>Rumus pada Persegi Panjang yaitu :</p>
+            <p>L = p x l <br> K = 2 x (p + l)</p>
+            <p>Dimana :</p>
+            <p>L : Luas</p>
+            <p>K : Keliling</p>
+            <p>p : Panjang</p>
+            <p>l : Lebar</p><br><br>
+            <div class="count">
+                <p>Input Nilai Panjang</p>
+                <input type="number" name="panjang" id="panjang" required><br>
+                <p>Input Nilai Lebar</p>
+                <input type="number" name="lebar" id="lebar" required>
+            </div>
+        </section>
     </main>
     <script src="js/script.js"></script>
 </body>
